# Simple-PySpark-app-Test

./: README.md  app.py  setup.cfg  setup.py
.github/workflows/: pyspark-app-manual-trigger.yml  pyspark-app-on-commit.yml  pyspark-app.yml
client_data/: .part-00000-05c2f722-3d10-44a6-b8d4-f2b66c3b722a-c000.csv.crc  .part-00000-5defa2c6-22f9-483b-ae7c-609e43aecbbe-c000.csv.crc  .part-00000-7b22dfca-b36b-4536-8b83-14b45ed3046d-c000.csv.crc  .part-00000-7d5f6f77-dab1-4d5d-8d4a-dafff42b6d10-c000.csv.crc  .part-00000-cc47fb40-944c-44fb-9a26-32a326b7bbd3-c000.csv.crc  .part-00000-d34ac8dc-a242-4907-b4f3-794f31ebebbc-c000.csv.crc  .part-00000-ef6894a1-18ad-4081-aefa-f9bf202dece4-c000.csv.crc  part-00000-400a6394-6753-4a44-9c57-4c1692e4d931-c000.csv  part-00000-5defa2c6-22f9-483b-ae7c-609e43aecbbe-c000.csv  part-00000-7d5f6f77-dab1-4d5d-8d4a-dafff42b6d10-c000.csv  part-00000-cc47fb40-944c-44fb-9a26-32a326b7bbd3-c000.csv
src/: app.py  app_functions.py
tests/: functions.py  test_app.py
