[metadata]
name = KaommatiPara-data-analysis
version = 1.0
description = A program for for combining client data with Bitcoin transactions data
long_description = file: README.md
classifiers =
    Programming Language :: Python :: 3

[options]
python_requires = >=3.7
install_requires =
    pyspark
package_dir =
    =src
packages = find:

[options.packages.find]
where = src
